# fld_pyutils

./: .gitignore  CMakeLists.txt  demo_plot.py  demo_vtk_high_order_01.py  demo_vtk_high_order_02.py  fld_batch.py  fld_data.py  fld_data_base.py  fld_data_memmap.py  fld_header.py  fld_reader.py  mask_example.py  proteus_reader.py  readthedocs.yml  rod_short_test.py
cxx/demos/: lagrange_hex_demo.cpp  lagrange_hex_many_demo.cpp  lagrange_tet_demo.cpp  ugrid.cpp
cxx/include/: FldData.h  FldHeader.h  make_lagrange_hex.h
cxx/src/: FldData.cpp  main.cpp  make_lagrange_hex.cpp  plot_hex_grid.cpp
data/: three3d0.f00001  vcoord.txt  vdata.txt
demos/: demo_fromdata.py  demo_fromdata_setscalars.py  demo_fromdata_tofile.py  demo_fromfile.py  demo_fromfile_edit.py  demo_fromfile_tofile.py  demo_fromproteus.py  demo_fromvalues.py  demo_fromvalues_tofile.py  demo_vtk_high_order.py  demo_vtk_high_order_02.py  demo_vtk_quad_hex.py  merge_fld.py
demos/data/: one3d0.f00001  two3d0.f00001
doc/: Makefile
doc/source/: conf.py  index.rst
docs/: .buildinfo  Makefile  api.html  genindex.html  index.html  objects.inv  quickstart.html  search.html  searchindex.js  users.html
docs/.doctrees/: api.doctree  environment.pickle  index.doctree  quickstart.doctree  users.doctree
docs/.doctrees/api/: fld_data.doctree  fld_header.doctree  index.doctree
docs/.doctrees/tutorial/: accessing.doctree  editing.doctree  fromfile.doctree  fromvalues.doctree  index.doctree  tofile.doctree
docs/.doctrees/users/: about.doctree  data.doctree  fromdata.doctree  fromfile.doctree  index.doctree  tofile.doctree  updating.doctree
docs/_modules/: fld_data.html  fld_header.html  index.html
docs/_sources/: index.rst.txt
docs/_sources/api/: fld_data.rst.txt  index.rst.txt
docs/_sources/tutorial/: accessing.rst.txt  fromfile.rst.txt  fromvalues.rst.txt  index.rst.txt  tofile.rst.txt
docs/_sources/users/: data.rst.txt  fromfile.rst.txt  index.rst.txt  tofile.rst.txt
docs/_static/: basic.css  bizstyle.css  bizstyle.js  css3-mediaqueries_src.js  doctools.js  language_data.js  pygments.css  searchtools.js
docs/api/: fld_data.html  fld_header.html  index.html
docs/source/: api.rst  conf.py  index.rst  requirements.txt  users.rst
docs/source/api/: fld_data.rst  fld_data_memmap.rst  fld_header.rst  index.rst
docs/source/tutorial/: accessing.rst  editing.rst  fromfile.rst  fromvalues.rst  index.rst  memmap.rst  (+1 more)
docs/tutorial/: accessing.html  editing.html  fromfile.html  fromvalues.html  index.html  tofile.html
docs/users/: about.html  data.html  fromdata.html  fromfile.html  index.html  tofile.html  updating.html
nek5000_src/: visnek.sh
python/: demo_assembly.py  demo_plot.py  demo_rod_short.py  fld_data.py  fld_data_base.py  fld_data_memmap.py
python/demos/: demo_fromfile_tofile.py  demo_fromfile_tofile_memmap.py  demo_memmap_c_mode.py  demo_slice.py  demo_vtk_high_order_02.py  lagrange_tet_demo.py  prof_fromfile_tofile.py
(+5 files in other folders)
